# RS2_UR3_Selfie_Project

./: .gitignore  Dockerfile  README.md
OpenCVTest/: ROS_functions.py  example_config.json  extract_feature.py  img_processing_functions.py  lib_img_processing.py  lib_ros_functions.py  main.py  requirements.txt  subpixel_edge_detection.py  tests.py
OpenCVTest/test_scripts/: claudesIdeas.py  gui.py  ridge-detection.py  rm_background_test.py
OpenCVTest/tests/: Test-Output.txt
Path_Planning_2_0/: .~lock.PhaseReview3Personal.odt#  CMakeLists.txt  PhaseReview3Personal.odt  main.cpp  nearestLineEndpoint.cpp  nearestLineEndpoint.h  nearestLines.cpp  nearestPointbyLines.cpp
Path_Planning_2_0/Data/: data1.txt  data2.txt  data3.txt
Path_Planning_2_0/test/: CMakeLists.txt  utest.cpp
Path_Planning_2_0/test/test/: CTestTestfile.cmake  Makefile  cmake_install.cmake
RS2/: .~lock.data.csv#  Aruco_detection_usb.py  CMakeLists.txt  Final_Waypoints_Robot.csv  Get_final_points_to_robot.py  Paper_Robot_Frame.py  PixelMM.py  Run_Final.py  Ur3_controller.py  Waypoints.csv  Waypoints_mm.csv  Waypoints_mm_scaled.csv  package.xml  read_csv.py
RS2/launch/: rs2.launch
RS2/scripts/: Aruco_detection_usb.py  Final_Waypoints_Robot.csv  Get_final_points_to_robot.py  Paper_Robot_Frame.py  PixelMM.py  Ros_Topic.py  Run_Final.py  Test_Draw.py  Tung_File.py  Ur3_controller.py
optimize/: CMakeLists.txt
optimize/launch/: optimize.launch
optimize/rviz/: config.rviz
optimize/src/: function.cpp  main.cpp  mainWithRosMsgs.cpp  optimized_path.csv
robotSelfie/: CMakeLists.txt  package.xml
robotSelfie/launch/: selfie.launch
robotSelfie/matlab_scripts/: optimized_path_plotter.m  runMatlabCommand  test.m
robotSelfie/msg/: Contour.msg  ContourList.msg
robotSelfie/rviz/: config.rviz
robotSelfie/scripts/: main.py  requirements.txt  ros_functions.py  tests.py
robotSelfie/src/: function.cpp  function.h  main.cpp  mainWithRosMsgs.cpp  optimized_path.csv  optimized_path.txt
robotSelfie/test/: function_test.cpp
robotselfie/: CMakeLists.txt  package.xml
robotselfie/msg/: Contour.msg
robotselfie/scripts/outputs/: output.txt
robotselfie/src/: function.h  mainWithRosMsgs.cpp
src/optimize/: package.xml
src/optimize/src/: function.h
